--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^4.10.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
