--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
