--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "firebase": "^9.23.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-moment": "^1.1.3",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "swiper": "^10.0.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
